[gd_scene load_steps=29 format=3 uid="uid://c6xun68rcnm2w"]

[ext_resource type="Theme" uid="uid://bjvi4gbyjhody" path="res://UI/menus_do_teste.tres" id="1_0dxv3"]
[ext_resource type="Texture2D" uid="uid://bewxoofa1r3lc" path="res://assets/icons/music_note/music_note_normal.svg" id="1_56sam"]
[ext_resource type="Script" path="res://UI/configurações_da_tela_inicial_teste.gd" id="2_85twk"]
[ext_resource type="Texture2D" uid="uid://d4kijdj4ncevo" path="res://assets/icons/speaker/speaker_normal.svg" id="2_mmnip"]
[ext_resource type="Texture2D" uid="uid://r4hdwkmrtepa" path="res://assets/icons/close/close_normal.svg" id="3_au8ie"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71q71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvljn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nosj6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqr2o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fuv8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3gqci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lgsg5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oyk8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_15400"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4spef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3yj1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujbua"]
bg_color = Color(0.94902, 0.862745, 0.796078, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.745098, 0.568627, 0.435294, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f60ap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r15s8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcdte"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sor3c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mnask"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ldw28"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dfuvt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uqpyr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmgic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8c7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqjw0"]

[node name="ConfiguraçõesDaTelaInicialTeste" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0dxv3")
script = ExtResource("2_85twk")

[node name="BotãoFundoFechar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_71q71")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_pvljn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nosj6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_qqr2o")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3fuv8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_3gqci")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lgsg5")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_oyk8t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_15400")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4spef")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3yj1x")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.289
anchor_top = 0.265
anchor_right = 0.711
anchor_bottom = 0.735
offset_left = 0.571991
offset_top = 0.279984
offset_right = -0.572021
offset_bottom = -0.279999
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ujbua")

[node name="AspectRatioContainerBotãoFechar" type="AspectRatioContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.901
anchor_right = 1.0
anchor_bottom = 0.158
offset_left = 0.0149841
offset_top = 16.0
offset_right = -16.0
offset_bottom = -0.0320015
alignment_horizontal = 2
alignment_vertical = 0

[node name="BotãoFechar" type="Button" parent="Background/AspectRatioContainerBotãoFechar"]
layout_mode = 2
theme_override_icons/icon = ExtResource("3_au8ie")
theme_override_styles/focus = SubResource("StyleBoxEmpty_f60ap")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_r15s8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bcdte")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_sor3c")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_mnask")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ldw28")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dfuvt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_uqpyr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vmgic")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_l8c7o")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cqjw0")
icon_alignment = 1
expand_icon = true

[node name="AspectRatioContainerBotãoMúsica" type="AspectRatioContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.105
anchor_right = 0.198
anchor_bottom = 0.316
offset_left = -0.00999832
offset_top = 0.079998
offset_right = -0.0300064
offset_bottom = -0.064003

[node name="BotãoMúsica" type="Button" parent="Background/AspectRatioContainerBotãoMúsica"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/icon = ExtResource("1_56sam")
icon_alignment = 1
expand_icon = true

[node name="HSliderMúsica" type="HSlider" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.231
anchor_top = 0.184
anchor_right = 0.934
anchor_bottom = 0.289
offset_left = -0.0350037
offset_top = 0.0639954
offset_right = 0.00997925
offset_bottom = -15.856
value = 30.0

[node name="AspectRatioContainerBotãoEfeitosSonoros" type="AspectRatioContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.395
anchor_right = 0.198
anchor_bottom = 0.605
offset_left = -0.00999832
offset_top = -0.0800018
offset_right = -0.0300064
offset_bottom = 0.0799866

[node name="BotãoEfeitosSonoros" type="Button" parent="Background/AspectRatioContainerBotãoEfeitosSonoros"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/icon = ExtResource("2_mmnip")
icon_alignment = 1
expand_icon = true

[node name="HSliderEfeitosSonoros" type="HSlider" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.231
anchor_top = 0.474
anchor_right = 0.934
anchor_bottom = 0.579
offset_left = -0.0350037
offset_top = -0.0960083
offset_right = 0.00997925
offset_bottom = -16.016
value = 100.0

[node name="BotãoParâmetros" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.684
anchor_right = 0.934
anchor_bottom = 0.895
offset_left = -0.00999832
offset_top = 0.0639954
offset_right = 0.00997925
offset_bottom = -0.0800171
theme_override_font_sizes/font_size = 32
text = "Parâmetros"

[connection signal="pressed" from="BotãoFundoFechar" to="." method="_on_botão_fundo_fechar_pressed"]
[connection signal="button_down" from="Background/AspectRatioContainerBotãoFechar/BotãoFechar" to="." method="_on_botão_fechar_button_down"]
[connection signal="button_up" from="Background/AspectRatioContainerBotãoFechar/BotãoFechar" to="." method="_on_botão_fechar_button_up"]
[connection signal="pressed" from="Background/AspectRatioContainerBotãoFechar/BotãoFechar" to="." method="_on_botão_fechar_pressed"]
[connection signal="button_down" from="Background/AspectRatioContainerBotãoMúsica/BotãoMúsica" to="." method="_on_botão_música_button_down"]
[connection signal="button_up" from="Background/AspectRatioContainerBotãoMúsica/BotãoMúsica" to="." method="_on_botão_música_button_up"]
[connection signal="pressed" from="Background/AspectRatioContainerBotãoMúsica/BotãoMúsica" to="." method="_on_botão_música_pressed"]
[connection signal="value_changed" from="Background/HSliderMúsica" to="." method="_on_h_slider_música_value_changed"]
[connection signal="button_down" from="Background/AspectRatioContainerBotãoEfeitosSonoros/BotãoEfeitosSonoros" to="." method="_on_botão_efeitos_sonoros_button_down"]
[connection signal="button_up" from="Background/AspectRatioContainerBotãoEfeitosSonoros/BotãoEfeitosSonoros" to="." method="_on_botão_efeitos_sonoros_button_up"]
[connection signal="pressed" from="Background/AspectRatioContainerBotãoEfeitosSonoros/BotãoEfeitosSonoros" to="." method="_on_botão_efeitos_sonoros_pressed"]
[connection signal="value_changed" from="Background/HSliderEfeitosSonoros" to="." method="_on_h_slider_efeitos_sonoros_value_changed"]
[connection signal="pressed" from="Background/BotãoParâmetros" to="." method="_on_botão_parâmetros_pressed"]
